<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".IndexActivity" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@drawable/background" />

    <Button
        android:id="@+id/btNormal"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="60dp"
        android:text="@string/btNormal" />

    <Button
        android:id="@+id/btGif"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_below="@+id/btNormal"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/btGif" />

    <Button
        android:id="@+id/btLiveShare"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_alignLeft="@+id/btGif"
        android:layout_below="@+id/btGif"
        android:layout_marginTop="50dp"
        android:text="@string/btLiveShare" />

</RelativeLayout>