<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView 
        android:background="@drawable/background"
        android:layout_height="fill_parent"
        android:layout_width="fill_parent"/>
    
    <FrameLayout
        android:id="@+id/preview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true" >

        <Spinner
            android:id="@+id/spinShooseNumofPic"
            android:layout_width="154dp"
            android:layout_height="wrap_content" 
            android:prompt="@string/spiner"/>

    </FrameLayout>

    <ZoomControls 
        android:id="@+id/zoom_control"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15dp"
        android:visibility="visible"/>


    <RelativeLayout
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="5dp" >

        <Button
            android:id="@+id/button_take_picture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="10dp"
            android:text="@string/take_picture" />

        <Button
            android:id="@+id/button_switch_camera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:text="@string/switch_camera" />
    </RelativeLayout>

    <ImageView
        android:id="@+id/ivShow"
        android:contentDescription="@string/spiner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true" />

    <Button
        android:id="@+id/btShareInAnination"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/zoom_control"
        android:layout_centerHorizontal="true"
        android:text="@string/btShare" />

</RelativeLayout>